--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "AtomicParsley-source-0.9.0.zip": 6a73aed6ba569e693fe94a313e7e9e9ce204d038
+  atomicparsley-20201231.092811.cbecfb1.tar.gz: 134ba112cb09de934a730e5faf6c4e1e558fe2f0
